--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.pm1e2grupo3app">
+    <!-- Asegúrate que este sea tu nombre de paquete -->
+    <!-- Permisos -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
-
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
-    <uses-feature android:name="android.hardware.location.gps" />
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- El permiso READ_EXTERNAL_STORAGE ya no es necesario para la mayoría de los casos en APIs recientes -->
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
     <application
         android:allowBackup="true"
@@ -22,25 +22,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PM1E2GRUPO3"
-        android:usesCleartextTraffic="true"> <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="TU_API_KEY_DE_GOOGLE_MAPS_AQUI" />
-
+        android:usesCleartextTraffic="true"
+        tools:node="merge">
+        <activity
+            android:name=".MapActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateActivity"
+            android:exported="false" /> <!-- Añadido para forzar la fusión y evitar conflictos -->
+        <!-- La línea <tools:targetApi="31"> se eliminó de aquí porque era incorrecta -->
+        <!-- API KEY DE GOOGLE MAPS -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAe-TG4RAZLWXI7xsbnhr6-Chk8muZp26c" /> <!-- Pantalla 1: Crear Contacto (la principal) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".ListaContactosActivity" />
-
-        <activity android:name=".MapaActivity" />
-
-        <activity android:name=".VideoPlayerActivity" />
-
+        </activity> <!-- Otras Activities -->
+        <activity android:name=".ListContactsActivity" /> <!-- Proveedor de archivos (para la foto/video) -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
