--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.pm1e2grupo3app">
+    package="com.example.pm1e2grupo3">
     <!-- Asegúrate que este sea tu nombre de paquete -->
     <!-- Permisos -->
     <uses-permission android:name="android.permission.INTERNET" />
